2009-03-31 John Wu <John.Wu at ACM.org>
	* src/fileManager.h, src/fileManager.cpp: add functions
	adjustCacheSize and currentCacheSize at the request of Jochen
	Schlosser, update in-line documentation of some functions
	* src/part.h: add weighted versions of get1DBins, get2DBins, and
	get3DBins
	* src/parth3dw.cpp: add separate file for an implementation of
	get3DBins with weighting
	* src/column.cpp: avoid ibis::roster if currentDataDir() returns
	nil, a problem encountered in HDF5_FastQuery reported by Oliver
	Ruebel
	* examples/ibis.cpp: add a new print weighted command to test the
	new weighted histogram functions, add calls to ibis::util::clean
	to free vector<bitvector*> allocated with get1DBins, get2DBins,
	and get3DBins.
	* src/parth.cpp: get1DDistribution returns the number of rows
	selected instead of the number of bins

2009-03-30 John Wu <John.Wu at ACM.org>
	* src/part.h: start implementing functions to compute weighted
	histograms at the request of Oliver Ruebel

2009-03-27 John Wu <John.Wu at ACM.org>
	* src/qExpr.h: update the binary search procedure in
	qDiscreteRange::inRange to check the last values[m]
	* examples/ibis.cpp: in findMissingValues, count the values that
	match and report if query 1 found less instances than query 0,
	print all values if more than half will be printed
	* tests/Makefile.am: add a new test case to exercise the new test
	implemented in tableSelect of examples/ibis.cpp (with option -r)

2009-03-26 John Wu <John.Wu at ACM.org>
	* examples/ibis.cpp: in the loop to handle reordering of data
	partitions, delete str at the end (instead of in the middle)
	* src/part.h, src/part.cpp: change m_desc from char* to
	std::string
	* src/parti.cpp: add note to m_desc to indicate the data has been
	reordered, add call to computeMinMax if the min/max are not set
	when deciding whether to use the column as a key for sorting (in
	ibis::part::reorder)
	* src/column.h, src/part.h: add call to strerror to explain errors