@@ -1,0 +1,22 @@
+
+1D-Weighted distribution of a from table t1 subject to the condition c > 80 with 100 bins
+1	[1, 2)	2
+2	[2, 3)	4
+3	[3, 4)	6
+4	[4, 5)	8
+5	[5, 6)	10
+6	[6, 7)	12
+7	[7, 8)	14
+8	[8, 9)	16
+9	[9, 10)	18
+10	[10, 11)	20
+11	[11, 12)	22
+12	[12, 13)	24
+13	[13, 14)	26
+14	[14, 15)	28
+15	[15, 16)	30
+16	[16, 17)	32
+17	[17, 18)	34
+18	[18, 19)	36
+  Number of occupied cells = 18, total weight = 342, number of rows in t1 = 200
+
